# utility

./: make-repos-private.ps1  make-repos-private.sh
.claude/: settings.local.json
keycast/: CMakeLists.txt  build.bat
keycast/src/: main.cpp
keycast/src/core/: application.cpp  application.h  settings.cpp  settings.h
keycast/src/desktop/: remotedesktopwidget.cpp  remotedesktopwidget.h  remotedesktopwindow.cpp  remotedesktopwindow.h  screencapture.cpp  screencapture.h
keycast/src/input/: inputcapture.cpp  inputcapture.h  inputinjector.cpp  inputinjector.h
keycast/src/network/: client.cpp  client.h  discovery.cpp  discovery.h  protocol.cpp  protocol.h  server.cpp  server.h  sslconfig.cpp  sslconfig.h
keycast/src/shortcuts/: actionexecutor.cpp  actionexecutor.h  shortcutmanager.cpp  shortcutmanager.h
keycast/src/ui/: connectionwidget.cpp  connectionwidget.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  systemtray.cpp  systemtray.h
